Change path for inventory_file
